@@ -1,5 +1,5 @@
 
-# This file was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.030.
+# This file was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.011.
 use strict;
 use warnings;
 
@@ -21,7 +21,6 @@ my %module_build_args = (
   "dist_version" => "0.1253",
   "license" => "perl",
   "module_name" => "Activiti::Rest::Client",
-  "recommends" => {},
   "recursive_test_files" => 1,
   "requires" => {
     "Carp" => 0,
@@ -36,7 +35,6 @@ my %module_build_args = (
     "perl" => "v5.10.0",
     "strict" => 0
   },
-  "script_files" => [],
   "test_requires" => {
     "Software::License" => 0,
     "Test::Exception" => 0,
@@ -59,5 +57,6 @@ unless ( eval { Module::Build->VERSION(0.4004) } ) {
 }
 
 my $build = Module::Build->new(%module_build_args);
+
 
 $build->create_build_script;
