@@ -1,3 +1,6 @@
+{{$NEXT}}
+   - add option timeout for client
+
 0.1253 2015-09-28
    - support for jobs
 0.1252 2015-07-14
